modified:   _config.yml 	modified:   img/favicon.ico

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Hux Blog
 SEOTitle: sapphire_fic
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "这里是 @Hux黄玄 的个人博客，11111111111111"
-keyword: "11111111, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
+email: sapphire_fic@foxmail.com
+description: "这里是sapphire_fic的个人网站"
+keyword: "徐拂来,sapphire_fic, sapphire, 拂来, 博客, 个人网站"
 url: "https://sapphire-xu.github.io/" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -13,10 +13,10 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username: huxpro
-zhihu_username: huxpro
-github_username: huxpro
-twitter_username: huxpro
+#weibo_username: huxpro
+#zhihu_username: huxpro
+#github_username: huxpro
+#twitter_username: huxpro
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
@@ -69,13 +69,14 @@ netease_comment: false
 # ba_track_id: [your track id]
 
 # Google Analytics
-ga_track_id: "UA-49627206-1" # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+# 11111111
+# ga_track_id: "UA-49627206-1" # Format: UA-xxxxxx-xx
+# ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "要做一个有 swag 的程序员 <br> React Team @ Meta"
-sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "正在尝试新事物 <br> React Team @ OriGen新技元"
+#111sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
@@ -89,14 +90,14 @@ service-worker: true
 page-mathjax: false
 
 # Friends
-friends:
-  [
-    { title: "乱序（Midare）", href: "http://mida.re/" },
-    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
-    { title: "Kun Qian", href: "http://kunq.me" },
-    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
-    { title: "SmdCn", href: "http://blog.smdcn.net" },
-    { title: "JiyinYiyong", href: "http://tiye.me/" },
-    { title: "DHong Say", href: "http://dhong.co" },
-    { title: "尹峰以为", href: "http://ingf.github.io/" },
-  ]
+# friends:
+#   [
+#     { title: "乱序（Midare）", href: "http://mida.re/" },
+#     { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
+#     { title: "Kun Qian", href: "http://kunq.me" },
+#     { title: "Sherry Woo", href: "https://sherrywoo.me/" },
+#     { title: "SmdCn", href: "http://blog.smdcn.net" },
+#     { title: "JiyinYiyong", href: "http://tiye.me/" },
+#     { title: "DHong Say", href: "http://dhong.co" },
+#     { title: "尹峰以为", href: "http://ingf.github.io/" },
+#   ]
