--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Hux Blog
+title: Fly Blog
 SEOTitle: sapphire_fic
 header-img: img/xj-home.png
 email: sapphire_fic@foxmail.com
