--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: sapphire_fic
 header-img: img/xj-home.png
 email: sapphire_fic@foxmail.com
 description: "这里是sapphire_fic的个人网站"
-keyword: "徐拂来,sapphire_fic, sapphire, 拂来, 博客, 个人网站"
+keyword: "徐拂来, sapphire_fic, 许fly, 拂来, 博客, 个人网站, fly, sapphire, 新技元, OriGen"
 url: "https://sapphire-xu.github.io/" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -75,7 +75,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "正在尝试新事物 <br> React Team @ OriGen新技元"
+sidebar-about-description: "正在尝试新事物 <br> Relative Team @ OriGen新技元"
 #111sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
